# miseventos-backend

./: alembic.ini  alembic.ini_old  pyproject.toml
alembic/: env.py
alembic/versions/: 20260107_152550_add_ondelete_cascade.py  20260107_193922_add_ondelete_cascade_to_session_speaker.py  20260108_092637_add_ondelete_cascade_to_session_speaker.py  20260113_205815_add_ondelete_cascade_tabla_speaker_y_.py  20260131_165352_fix_event_deletion_cascade.py  20260131_165634_complete_cascade_deletes.py
app/: .gitignore  main.py
app/entitis/: user.py
app/infrastructure/persistence/postgresql/: database.py
app/infrastructure/persistence/postgresql/models/: event_model.py  event_registration_model.py  roles_model.py  session_model.py  session_registration_model.py  speaker_model.py  status_model.py  user_model.py
app/repositories/: user_repository.py
src/miseventos/: main.py
src/miseventos/alembic/: env.py
src/miseventos/entitis/: event.py  event_registration.py  role.py  sessions.py  speaker.py  time_slot.py  user.py
src/miseventos/infrastructure/api/controllers/: auth_controller.py  event_controller.py  session_controller.py  (+4 more)
src/miseventos/repositories/: event_repository.py  session_register_repository.py  session_repository.py  slot_repository.py  speaker_repository.py  user_repository.py
src/miseventos/use_case/: event_usecase.py  register_user.py  session_register_usecase.py  session_usecase.py  slot_usecase.py  speaker_usecase.py
src/token_jwt/: jwt_handler.py
src/utils/: cryp_password.py
tests/: conftest.py  test_event_repository.py
(+32 files in other folders)
